// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remote jpg 1`] = `
{
  "bitDepth": 8,
  "components": 3,
  "height": 300,
  "progressive": false,
  "type": "jpg",
  "width": 200,
}
`;

exports[`remote png 1`] = `
{
  "alpha": true,
  "bitDepth": 8,
  "colorType": 6,
  "compressionMethod": 0,
  "filterMethod": 0,
  "height": 170,
  "interlaceMethod": 0,
  "type": "png",
  "width": 272,
}
`;

exports[`sus.jpg 1`] = `
{
  "bitDepth": 8,
  "components": 3,
  "height": 1024,
  "progressive": true,
  "type": "jpg",
  "width": 842,
}
`;

exports[`sus-palette-a.png 1`] = `
{
  "alpha": true,
  "bitDepth": 8,
  "colorType": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "height": 1024,
  "interlaceMethod": 0,
  "type": "png",
  "width": 842,
}
`;

exports[`sus-palette-no_a.png 1`] = `
{
  "alpha": false,
  "bitDepth": 8,
  "colorType": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "height": 1024,
  "interlaceMethod": 0,
  "type": "png",
  "width": 842,
}
`;

exports[`sus-rgb-a.png 1`] = `
{
  "alpha": true,
  "bitDepth": 16,
  "colorType": 6,
  "compressionMethod": 0,
  "filterMethod": 0,
  "height": 1024,
  "interlaceMethod": 0,
  "type": "png",
  "width": 842,
}
`;

exports[`sus-rgb-no_a.png 1`] = `
{
  "alpha": false,
  "bitDepth": 8,
  "colorType": 2,
  "compressionMethod": 0,
  "filterMethod": 0,
  "height": 1024,
  "interlaceMethod": 0,
  "type": "png",
  "width": 842,
}
`;
